--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Space Western</title>
         <link rel="stylesheet" href="main.css">
         <script src="./phaser.js"></script>
+        <script src="./easystar-0.4.3.js"></script>
     </head>
     <body>
         <script type="module" src="main.js"></script>
