--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
         <link rel="stylesheet" href="main.css">
         <script src="./phaser.js"></script>
         <script src="./easystar-0.4.3.js"></script>
+        <script src="./src/stage1.js"></script>
+        
     </head>
     <body>
-        <script type="module" src="main.js"></script>
+        <div id="goo"></div>
     </body>
+    <script src="main.js"></script>
 </html>
