--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <script src="./phaser.js"></script>
         <script src="./easystar-0.4.3.js"></script>
         <script src="./src/stage1.js"></script>
+        <script src="./src/mainmenu.js"></script>
         
     </head>
     <body>
