Wrangled the scene manager

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <script src="./src/stage1.js"></script>
         <script src="./src/tutorial.js"></script>
         <script src="./src/mainmenu.js"></script>
+        <script src="./src/win.js"></script>
+        <script src="./src/lose.js"></script>
     </head>
     <body>
         <div id="goo"></div>
