--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <meta charset="UTF-8">
         <title>Space Western</title>
         <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Eater">
         <script src="./phaser.js"></script>
         <script src="./easystar-0.4.3.js"></script>
         <script src="./src/stage1.js"></script>
@@ -12,7 +13,7 @@
         <script src="./src/lose.js"></script>
     </head>
     <body>
-        <div id="goo"></div>
+        <div id="goo" style="font-family: Eater;position: absolute; left:-1000px; visibility:hidden;">.</div>
     </body>
     <script src="main.js"></script>
 </html>
