transitions and fixes for eatmode in tutorial

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Space Western</title>
         <link rel="stylesheet" href="main.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Eater">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rye">
         <script src="./phaser.js"></script>
         <script src="./easystar-0.4.3.js"></script>
         <script src="./src/stage1.js"></script>
@@ -14,6 +15,7 @@
     </head>
     <body>
         <div id="goo" style="font-family: Eater;position: absolute; left:-1000px; visibility:hidden;">.</div>
+        <div id="goo" style="font-family: Rye;position: absolute; left:-1000px; visibility:hidden;">.</div>
     </body>
     <script src="main.js"></script>
 </html>
