added credits page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <script src="./src/mainmenu.js"></script>
         <script src="./src/win.js"></script>
         <script src="./src/lose.js"></script>
+        <script src="./src/credits.js"></script>
     </head>
     <body>
         <div id="goo" style="font-family: Eater;position: absolute; left:-1000px; visibility:hidden;">.</div>
