Reorganized file structure and redid relative paths for public domain

--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
     <head>
         <meta charset="UTF-8">
         <title>Space Western</title>
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="./Code/GameSetup/main.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Eater">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rye">
-        <script src="./phaser.js"></script>
-        <script src="./easystar-0.4.3.js"></script>
-        <script src="./src/stage1.js"></script>
-        <script src="./src/tutorial.js"></script>
-        <script src="./src/mainmenu.js"></script>
-        <script src="./src/win.js"></script>
-        <script src="./src/lose.js"></script>
-        <script src="./src/credits.js"></script>
+        <script src="./Libraries/phaser.js"></script>
+        <script src="./Libraries/easystar-0.4.3.js"></script>
+        <script src="./Code/stage1.js"></script>
+        <script src="./Code/tutorial.js"></script>
+        <script src="./Code/Menus/mainmenu.js"></script>
+        <script src="./Code/Menus/win.js"></script>
+        <script src="./Code/Menus/lose.js"></script>
+        <script src="./Code/Menus/credits.js"></script>
     </head>
     <body>
         <div id="goo" style="font-family: Eater;position: absolute; left:-1000px; visibility:hidden;">.</div>
         <div id="goo" style="font-family: Rye;position: absolute; left:-1000px; visibility:hidden;">.</div>
     </body>
-    <script src="main.js"></script>
+    <script src="./Code/GameSetup/main.js"></script>
 </html>
